# rust-package-template

./: .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  cliff.toml  deny.toml  renovate.json  setup_repo.sh  zensical.toml
.github/workflows/: ci.yml  documentation.yml  draft_release.yml  publish.yml  release.yml  scheduled_release.yml  semantic_pull_request.yml
benches/: greeting.rs
docs/: contributing.md  index.md  security.md
docs/api/: index.md
docs/template_documentation/: index.md
docs/template_documentation/development/: changelog.md  code_quality.md  troubleshooting.md
docs/template_documentation/onboarding/: customize_repository.md  quick_start.md
docs/template_documentation/user_guide/: ci_cd.md  customization.md  development_tools.md  documentation.md  installation.md  packaging.md  project_structure.md  quick_start.md  testing.md
examples/: greet.rs
src/: lib.rs  main.rs  message.rs
tests/: cli.rs
