[package]
name = "rust-package-template"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
authors = ["Isaac C. F. Wong"]
description = "A GitHub template repository for a Rust package"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/isaac-cf-wong/rust-package-template"
homepage = "https://github.com/isaac-cf-wong/rust-package-template"
documentation = "https://isaac-cf-wong.github.io/rust-package-template"
keywords = ["rust", "github", "template"]
categories = ["development-tools"]
exclude = ["/.github", "/docs/template_documentation"]

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "=2.2.2"
divan = "=0.1.21"
predicates = "=3.1.4"

[lib]
name = "rust_package_template"
path = "src/lib.rs"

[[bin]]
name = "rust-package-template"
path = "src/main.rs"

[[bench]]
name = "greeting"
harness = false

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "warn"
